@@ -1,12 +1,12 @@
 <?php  
 	if (!defined('BASEPATH')) exit('No direct script access allowed');
 
-	grocery_CRUD::set_css('assets/grocery_crud/themes/flexigrid/css/flexigrid.css');
-	grocery_CRUD::set_js('assets/grocery_crud/themes/datatables/js/jquery-1.6.2.min.js');
-	grocery_CRUD::set_js('assets/grocery_crud/themes/flexigrid/js/cookies.js');
-	grocery_CRUD::set_js('assets/grocery_crud/themes/flexigrid/js/flexigrid.js');
-	grocery_CRUD::set_js('assets/grocery_crud/themes/flexigrid/js/jquery.form.js');
-	grocery_CRUD::set_js('assets/grocery_crud/themes/flexigrid/js/jquery.numeric.js');
+	$this->set_css('assets/grocery_crud/themes/flexigrid/css/flexigrid.css');
+	$this->set_js('assets/grocery_crud/themes/datatables/js/jquery-1.6.2.min.js');
+	$this->set_js('assets/grocery_crud/themes/flexigrid/js/cookies.js');
+	$this->set_js('assets/grocery_crud/themes/flexigrid/js/flexigrid.js');
+	$this->set_js('assets/grocery_crud/themes/flexigrid/js/jquery.form.js');
+	$this->set_js('assets/grocery_crud/themes/flexigrid/js/jquery.numeric.js');
 	
 ?>
 <script type='text/javascript'>
